o change slurmctld to slurmd in header

--- a/trunk/doc/man/man8/slurmd.8
+++ b/trunk/doc/man/man8/slurmd.8
@@ -1,4 +1,4 @@
-.TH SLURMD "8" "October 2002" "slurmctld 0.1" "Slurm components"
+.TH SLURMD "8" "October 2002" "slurmd 0.1" "Slurm components"
 .SH "NAME"
 slurmd \- The compute node daemon of Slurm.
 .SH "SYNOPSIS"
