Note change in authd home page.

--- a/trunk/doc/common/project.bib
+++ b/trunk/doc/common/project.bib
@@ -2,7 +2,7 @@
 {
     Authd2002, 
     AUTHOR = "Authd home page",
-    TITLE  = "http://www.cs.berkeley.edu/\~bnc/authd/",
+    TITLE  = "http://www.theether.org/authd/",
 }
 
 @MISC
