--- a/trunk/doc/pubdesign/report.tex
+++ b/trunk/doc/pubdesign/report.tex
@@ -370,7 +370,7 @@ permissions to specific users.
 %{\em The secret key is readable by TotalView unless the executable 
 %file is not readable, but that prevents proper TotalView operation. 
 %For an alternative see authd documentation at 
-%$http://www.cs.berkeley.edu/\~bnc/authd/$. Here are some benefits:
+%$http://www.theether.org/authd/$. Here are some benefits:
 %\begin{itemize}
 %\item With authd, command line utilities do not need to be suid or sgid.
 %\item Because of the above, users could compile their own utilities against 
