--- a/trunk/doc/man/man8/slurmctld.8
+++ b/trunk/doc/man/man8/slurmctld.8
@@ -12,69 +12,47 @@ server fails.
 .TP
 OPTIONS
 .TP
-\fB-d\fR
+\fB\-c\fR
+Clear all previous \fBslurmctld\fR state from its last checkpoint. 
+Current default setting. 
+Also see the \fB\-r\fR option.
+.TP
+\fB\-d\fR
 Execute \fBslurmctld\fR as a daemon (in the background) with logging to syslog.
+Current default setting. 
+Also see the \fB\-D\fR option.
 .TP
-\fB-D\fR
+\fB\-D\fR
 Debug mode. Execute \fBslurmctld\fR in the foreground with logging to stdout. 
-(Current default).
+Also see the \fB\-d\fR option.
 .TP
-\fB-e <errlev>\fR
-Set stderr logging to the specified level..TP
-\fB-h\fR
-Help; print a brief summary of command options.
-.TP
-\fB-f <file>\fR
+\fB\-f <file>\fR
 Read configuration from the specified file.
 .TP
-\fB-l <errlev>\fR
-Set logfile logging to the specified level.
+\fB\-h\fR
+Help; print a brief summary of command options.
 .TP
-\fB-L <file>\fR
+\fB\-L <file>\fR
 Write log messages to the specified file.
 .TP
-\fB-s <errlev>\fR
-Set syslog logging to the specified level.
-.TP
-\fB-r\fR
+\fB\-r\fR
 Recover \fBslurmctld\fR state from its last checkpoint 
 (performed periodically and at time of graceful shutdown).
+Current default setting. 
+Also see the \fB\-c\fR option.
 .TP
-ARGUMENTS
-.TP
-\fIerrlev\fP
-The level of error to be reported, an integer value between 0 and 7. 
-Larger numbers result in more logging information. The numbers represent 
-the following levels of logging:
-.br
-\fB0\fR
-No logging of any events
-.br
-\fB1\fR
-Log fatal errors only
-.br
-\fB2\fR
-Log all errors
-.br
-\fB3\fR
-Log informational messages
-.br
-\fB4\fR
-Verbose logging of informational message
-.br
-\fB5,6,7\fR
-Log highly detailed debugging messages
-.TP
-\fB<file>\fR
-Pathname of a configuration or log file to use.
+\fB\-v\fR
+Verbose operation. Multiple \fB-\v\fR's increase verbosity.
+
 .SH "NOTES"
 It may be useful to experiment with different \fBslurmctld\fR specific 
 configuration parameters using a distinct configuration file. However, 
-this special configuration file will not be recognized by \fBslurmd\fR 
+this special configuration file will not be used by \fBslurmd\fR daemon 
 or the Slurm programs. If you desire changing communication ports, 
 the location of the temporary file system, or other parameters used 
 by other Slurm components, change the common configuration file, 
-\fB/etc/slurm.conf\fR.
+\fBslurm.conf\fR.
+
 .SH "COPYING"
 Copyright (C) 2002 The Regents of the University of California.
 Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -92,8 +70,6 @@ SLURM is distributed in the hope that it will be useful, but WITHOUT ANY
 WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
 FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
 details.
-.SH "FILES"
-.LP
-/etc/slurm.conf
+
 .SH "SEE ALSO"
 \fBslurm.conf\fR(5), \fBslurmd\fR(8)
