--- a/trunk/README
+++ b/trunk/README
@@ -21,10 +21,16 @@ TO TEST:
 
   Initiate "src/slurmctld/slurmctld" on the control machine (it can run 
      without root permissions, as user SlurmUser as specified in slurm.conf).
+     For testing purposes you probably want to use several options:
+     "-D" keep in foreground, "-c" clear state from previous executions, 
+     and possibly "-v" for verbose messages (more v's for more verbosity).
   Initiate "src/slurmd/slurmd" on each compute server (it needs to run 
      as root for production, but can run as a normal user for testing - 
      it will report errors on the initgroups, seteuid, and setegid functions 
-     if not run as root).
+     if not run as root, but if everything is run as the same user that's OK).
+     For testing purposes you probably want to use several options:
+     "-D" keep in foreground, "-c" clear state from previous executions, 
+     and possibly "-v" for verbose messages (more v's for more verbosity).
   Run jobs using the "src/srun/srun" command.
   Get system status using "src/sinfo/sinfo" and "src/squeue/squeue".
   Terminate jobs using "src/scancel/scancel".
@@ -46,6 +52,6 @@ STATUS (As of 12/19/2002):
       over 950 nodes). 
   Numerous performance enhancements are in the works as well as support
       for the TotalView debugger and pluggable authentication modules (PAM).
-  Send feedback to Morris Jette <jette1@llnl.gov> and Mark Grondona
-  <grondona1@llnl.gov>.
+  Send feedback to Morris Jette <jette1@llnl.gov> or Mark Grondona
+      <grondona1@llnl.gov>.
 
