Fix a few typos.

--- a/trunk/doc/man/man1/scontrol.1
+++ b/trunk/doc/man/man1/scontrol.1
@@ -1,4 +1,4 @@
-.TH SCONTROL "1" "October 2002" "scontrol 0.1" "Slurm components"
+.TH SCONTROL "1" "January 2003" "scontrol 0.1" "Slurm components"
 
 .SH "NAME"
 scontrol \- Used view and modify Slurm configuration and state.
@@ -184,7 +184,7 @@ Specify if jobs can be allocated nodes in this partition.
 Possible values are"UP" and "DOWN".
 If a partition allocated nodes to running jobs, those jobs will continue 
 execution even after the partition's state is set to "DOWN". The jobs 
-must be explicitly cancelled to force their termination.
+must be explicitly canceled to force their termination.
 .TP
 \fIMaxNodes\fP=<count>
 Set the maximum number of nodes which will be allocated to any single job 
