--- a/trunk/doc/man/man1/scancel.1
+++ b/trunk/doc/man/man1/scancel.1
@@ -1,15 +1,15 @@
-.TH SCANCEL "1" "November 2002" "scancel 0.1" "Slurm components"
+.TH SCANCEL "1" "January 2003" "scancel 0.1" "Slurm components"
 .SH "NAME"
 scancel \- Used to cancel jobs or job steps that are under the control of Slurm.
 .SH "SYNOPSIS"
 \fBscancel\fR [\fIOPTIONS\fR...] [\fIjob_id\fR[.\fIstep_id\fR]] [\fIjob_id\fR[.\fIstep_id\fR]...]
 .SH "DESCRIPTION"
 \fBscancel\fR is used to cancel jobs or job steps. An arbitrary number of jobs 
-or job steps may be cancelled using job specification used for filtering or a
+or job steps may be canceled using job specification used for filtering or a
 space separated list of specific job and/or job step IDs. A job or job step 
-can only be cancelled by the owner of that job or user root. If an attempt is 
+can only be canceled by the owner of that job or user root. If an attempt is 
 made by an unauthorized user to cancel a job or job step, an error message will 
-be printed and the job will not be cancelled. 
+be printed and the job will not be canceled. 
 .TP
 OPTIONS
 .TP
@@ -20,17 +20,17 @@ Print a help message describing the usage of scancel.
 Interactive mode. Confirm each job_id.step_id before performing the cancel operation.
 .TP
 \fB\-n\fR, \fB\-\-name\fR=\fIjob_name\fR
-The name of jobs to be cancelled.
+The name of jobs to be canceled.
 .TP
 \fB\-p\fR, \fB\-\-partition\fR=\fIpartition_name\fR
-The name of the partition from which jobs are to be cancelled.
+The name of the partition from which jobs are to be canceled.
 .TP
 \fB\-s\fR, \fB\-\-state\fR=\fIjob_state_name\fR
-The state of the jobs are to be cancelled. \fIjob_state_name\fR may have a value of 
+The state of the jobs are to be canceled. \fIjob_state_name\fR may have a value of 
 either "PENDING" or "RUNNING".
 .TP
 \fB\-u\fR, \fB\-\-user\fR=\fIuser_name\fR
-The name of the user whose jobs are to be cancelled.
+The name of the user whose jobs are to be canceled.
 .TP
 \fB\-v\fR, \fB\-\-verbose\fR
 Print additional logging. Multiple v's increase logging detail. 
@@ -38,16 +38,16 @@ Print additional logging. Multiple v's increase logging detail.
 \fB\-V\fR, \fB\-\-Version\fR
 Print the version number of the scontrol command. 
 .TP
-NOTE: If multiple filters are supplied (e.g. \fB\-\-partition\fR and \fB\-\-name\fR) only the jobs satisfying all of the filtering options will be cancelled.
+NOTE: If multiple filters are supplied (e.g. \fB\-\-partition\fR and \fB\-\-name\fR) only the jobs satisfying all of the filtering options will be canceled.
 .TP
 ARGUMENTS
 .TP
 \fIjob_id\fP
-The Slurm job ID of the job to have one of its steps or the entire job cancelled.
+The Slurm job ID of the job to have one of its steps or the entire job canceled.
 .TP
 \fIstep_id\fP
-The step ID of the job step to be cancelled. If none is provided, then 
-all jobs steps associated with the provided job_id will be cancelled along 
+The step ID of the job step to be canceled. If none is provided, then 
+all jobs steps associated with the provided job_id will be canceled along 
 with the job itself.
 .SH "EXAMPLES"
 .TP
