--- a/trunk/doc/man/man3/slurm_reconfigure.3
+++ b/trunk/doc/man/man3/slurm_reconfigure.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "October 2002" "Morris Jette" "Slurm administrative calls"
+.TH "Slurm API" "3" "January 2003" "Morris Jette" "Slurm administrative calls"
 .SH "NAME"
 slurm_init_part_desc_msg,
 slurm_reconfigure, slurm_shutdown, slurm_update_job, 
@@ -68,7 +68,7 @@ only be successfully executed by user root.
 only be successfully executed by user root.
 .LP 
 \fBslurm_update_job\fR Request that the configuration of a job be updated. Note that 
-most, but not all paramters of a job may be changed by this function. Initialize the 
+most, but not all parameters of a job may be changed by this function. Initialize the 
 data structure using the \fBslurm_init_job_desc_msg\fR function prior to setting 
 values of the parameters to be changed. Note: \fBslurm_init_job_desc_msg\fR is not 
 equivalent to setting the data structure values to zero. This function may only be 
@@ -77,7 +77,7 @@ successfully executed by user root.
 \fBslurm_update_node\fR Request that the state of one or more nodes be updated. Note that the state of a node (e.g. DRAINING, IDLE, etc.) may be changed, but its hardware configuration may not be changed by this function. If the hardware configuration of a node changes, update the Slurm configuration file and execute the \fBslurm_reconfigure\fR function. This function may only be successfully executed by user root.
 .LP 
 \fBslurm_update_part\fR Request that the configuration of a partition be updated. 
-Note that most, but not all paramters of a partition may be changed by this function. 
+Note that most, but not all parameters of a partition may be changed by this function. 
 Initialize the data structure using the \fBslurm_init_part_desc_msg\fR function prior 
 to setting values of the parameters to be changed. Note: \fBslurm_init_part_desc_msg\fR 
 is not equivalent to setting the data structure values to zero. If the partition 
