--- a/trunk/doc/man/man5/slurm.conf.5
+++ b/trunk/doc/man/man5/slurm.conf.5
@@ -1,4 +1,4 @@
-.TH "slurm.conf" "5" "November 2002" "Morris Jette" "Slurm configuration file"
+.TH "slurm.conf" "5" "January 2003" "Morris Jette" "Slurm configuration file"
 .SH "NAME"
 slurm.conf \- Slurm configuration file 
 .SH "DESCRIPTION"
@@ -57,7 +57,7 @@ be used to purge files, disable user login, etc. By default there is no epilog.
 If set to 1, then consider the configuration of each node to be that 
 specified in the configuration file. If set to 0, then base scheduling 
 decisions upon the actual configuration of each individual node. If the 
-number of node configuration entries in the configuration file is signficantly 
+number of node configuration entries in the configuration file is significantly 
 lower than the number of nodes, setting FastSchedule to 1 will permit 
 much faster scheduling decisions to be made. The default value is 1.
 .TP
