--- a/trunk/doc/man/man5/slurm.conf.5
+++ b/trunk/doc/man/man5/slurm.conf.5
@@ -123,8 +123,13 @@ makes it available for use.
 The name of the user that the \fBslurmctld\fR daemon executes as. For security 
 purposes a user other than "root" may be used. 
 .TP
+\fBSlurmctldDebug\fR
+The level of detail to provide \fBslurmctld\fR daemon's logs. Specify a 
+value between 0 and 7 with larger numbers indicating greater detail. The 
+default value is 3.
+.TP
 \fBSlurmctldLogFile\fR
-Fully qualified pathname of a file into which the \fBslurmctld\fR daemon's  logs are written.
+Fully qualified pathname of a file into which the \fBslurmctld\fR daemon's logs are written.
 .TP
 \fBSlurmctldPidFile\fR
 Fully qualified pathname of a file into which the  \fBslurmctld\fR daemon may write its process id. This may be used for automated signal processing.
@@ -138,6 +143,11 @@ build time.
 The interval, in seconds, that the backup controller waits for the 
 primary controller to respond before assuming control. The default value 
 is 300 seconds.
+.TP
+\fBSlurmdDebug\fR
+The level of detail to provide \fBslurmd\fR daemon's logs. Specify a 
+value between 0 and 7 with larger numbers indicating greater detail. The 
+default value is 3.
 .TP
 \fBSlurmdLogFile\fR
 Fully qualified pathname of a file into which the  \fBslurmd\fR daemon's logs are written.
@@ -399,6 +409,8 @@ ReturnToService=0
 SlurmctldLogFile=/var/log/slurmctld.log
 .br
 SlurmdLogFile=/var/log/slurmd.log
+.br
+SlurmctldDebug=4 SlurmdDebug=3
 .br
 SlurmctldPort=7002 SlurmdPort=7003
 .br
