--- a/trunk/doc/man/man1/scontrol.1
+++ b/trunk/doc/man/man1/scontrol.1
@@ -42,6 +42,10 @@ Terminate the execution of scontrol.
 \fIhelp\fP
 Display a description of scontrol options and commands.
 .TP
+\fIpid2jid\fP \fIPROC_ID\fP
+Print the Slurm job id corresponding to the supplied process id, \fIPROC_ID\fP,
+on the current node.
+.TP
 \fIquiet\fP
 Print no warning or informational messages, only fatal error messages.
 .TP
@@ -54,7 +58,7 @@ This mechanism would be used to register the physical addition or removal of
 nodes from the cluster or recognize the change of a node's configuration, 
 such as the addition of memory or processors. Running jobs continue execution.
 .TP
-\fIshow\fP \fIENTITY\fP \fPID\fP
+\fIshow\fP \fIENTITY\fP \fIID\fP
 Display the state of the specified entity with the specified identification.
 \fIENTITY\fP may be \fIconfig\fP, \fIjob\fP, \fInode\fP, \fIpartition\fP
 or \fIstep\fP.
