--- a/trunk/doc/man/man3/slurm_free_ctl_conf.3
+++ b/trunk/doc/man/man3/slurm_free_ctl_conf.3
@@ -100,11 +100,11 @@ int main (int argc, char *argv[])
 .LP
 	/* The hard way */
 .br
-	printf ("control_machine = %s\n", 
+	printf ("control_machine = %s\\n", 
 .br
 	        slurm_ctl_conf_ptr->control_machine);
 .br
-	printf ("server_timeout = %u\n", 
+	printf ("server_timeout = %u\\n", 
 .br
 	        slurm_ctl_conf_ptr->server_timeout);
 .LP
