--- a/trunk/doc/man/man3/slurm_free_partition_info.3
+++ b/trunk/doc/man/man3/slurm_free_partition_info.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "October 2002" "Morris Jette" "Slurm partition information reporting functions"
+.TH "Slurm API" "3" "January 2003" "Morris Jette" "Slurm partition information reporting functions"
 .SH "NAME"
 slurm_free_partition_info, slurm_load_partitions, 
 slurm_print_partition_info, slurm_print_partition_info_msg
@@ -118,7 +118,7 @@ int main (int argc, char *argv[])
 .LP
 	/* The hardest way. */
 .br
-	printf("Partitions updated at %lx, records=%d\n",
+	printf("Partitions updated at %lx, records=%d\\n",
 .br
 	       part_buffer_ptr->last_update, 
 .br
@@ -126,7 +126,7 @@ int main (int argc, char *argv[])
 .br
 	for (i = 0; i < part_buffer_ptr->record_count; i++) {
 .br
-		printf ("PartitionName=%s Nodes=%s\n", 
+		printf ("PartitionName=%s Nodes=%s\\n", 
 .br
 			part_info_ptr->partition_array[i].name, 
 .br
