--- a/trunk/doc/man/man3/slurm_get_errno.3
+++ b/trunk/doc/man/man3/slurm_get_errno.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "October 2002" "Morris Jette" "Slurm error handling functions"
+.TH "Slurm API" "3" "January 2003" "Morris Jette" "Slurm error handling functions"
 .SH "NAME"
 slurm_get_errno, slurm_perror, slurm_strerror \- Slurm error handling functions
 .SH "SYNTAX"
@@ -48,11 +48,11 @@ int main (int argc, char *argv[])
 .br
 	/* assume Slurm API function failed here */
 .br
-	fprintf (stderr, "Slurm function errno = %d\n", 
+	fprintf (stderr, "Slurm function errno = %d\\n", 
 .br
 	         slurm_get_errno ());
 .br
-	fprintf (stderr, "Slurm function errno = %d %s\n",
+	fprintf (stderr, "Slurm function errno = %d %s\\n",
 .br
 	         slurm_get_errno (), 
 .br
@@ -93,10 +93,11 @@ details.
 \fBslurm_free_resource_allocation_response_msg\fR(3), 
 \fBslurm_free_submit_response_response_msg\fR(3), 
 \fBslurm_get_job_steps\fR(3),
-\fBslurm_init_job_desc_msg\fR(3), \fBslurm_init_part_desc_msg\fR(3),  
+\fBslurm_init_job_desc_msg\fR(3), \fBslurm_init_part_desc_msg\fR(3), 
 \fBslurm_job_step_create\fR(3), \fBslurm_job_will_run\fR(3), 
 \fBslurm_load_ctl_conf\fR(3), \fBslurm_load_jobs\fR(3), 
 \fBslurm_load_node\fR(3), \fBslurm_load_partitions\fR(3), 
+\fBslurm_pid2jobid\fR(3),
 \fBslurm_reconfigure\fR(3), \fBslurm_shutdown\fR(3), \fBslurm_submit_batch_job\fR(3), 
 \fBslurm_update_job\fR(3), \fBslurm_update_node\fR(3), \fBslurm_update_partition\fR(3)
 
