--- a/trunk/doc/man/man3/slurm_get_errno.3
+++ b/trunk/doc/man/man3/slurm_get_errno.3
@@ -84,7 +84,6 @@ details.
 .SH "SEE ALSO"
 .LP 
 \fBslurm_allocate_resources\fR(3), \fBslurm_allocate_resources_and_run\fR(3), 
-\fBslurm_cancel_job\fR(3), \fBslurm_cancel_job_step\fR(3), 
 \fBslurm_complete_job\fR(3), \fBslurm_complete_job_step\fR(3), 
 \fBslurm_confirm_allocation\fR(3), 
 \fBslurm_free_ctl_conf\fR(3), \fBslurm_free_job_info_msg\fR(3), 
@@ -95,6 +94,7 @@ details.
 \fBslurm_get_job_steps\fR(3),
 \fBslurm_init_job_desc_msg\fR(3), \fBslurm_init_part_desc_msg\fR(3), 
 \fBslurm_job_step_create\fR(3), \fBslurm_job_will_run\fR(3), 
+\fBslurm_kill_job\fR(3), \fBslurm_kill_job_step\fR(3), 
 \fBslurm_load_ctl_conf\fR(3), \fBslurm_load_jobs\fR(3), 
 \fBslurm_load_node\fR(3), \fBslurm_load_partitions\fR(3), 
 \fBslurm_pid2jobid\fR(3),
