--- a/trunk/doc/man/man3/slurm_kill_job.3
+++ b/trunk/doc/man/man3/slurm_kill_job.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "January 2003" "Morris Jette" "Slurm job cancel calls"
+.TH "Slurm API" "3" "January 2003" "Morris Jette" "Slurm job signal calls"
 .SH "NAME"
 slurm_kill_job, slurm_kill_job_step \- Slurm job signal calls
 .SH "SYNTAX"
