--- a/trunk/doc/man/man1/scancel.1
+++ b/trunk/doc/man/man1/scancel.1
@@ -80,4 +80,4 @@ WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
 FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
 details.
 .SH "SEE ALSO"
-\fBslurm_cancel_job\fR(3), \fBslurm_cancel_job_step\fR(3)
+\fBslurm_kill_job\fR(3), \fBslurm_kill_job_step\fR(3)
