fixed spelling error.

--- a/trunk/doc/man/man8/slurmd.8
+++ b/trunk/doc/man/man8/slurmd.8
@@ -4,7 +4,7 @@ slurmd \- The compute node daemon of Slurm.
 .SH "SYNOPSIS"
 \fBslurmd\fR [\fIOPTIONS\fR...]
 .SH "DESCRIPTION"
-\fBslurmld\fR is the compute node daemon of Slurm. It monitors all tasks 
+\fBslurmd\fR is the compute node daemon of Slurm. It monitors all tasks 
 running on the compute node , accepts work (tasks), launches tasks, and kills 
 running tasks upon request.
 .TP
