Add description of new option "show daemons".

--- a/trunk/doc/man/man1/scontrol.1
+++ b/trunk/doc/man/man1/scontrol.1
@@ -63,8 +63,8 @@ The Slurm controller (slurmctld) forwards the request all other daemons
 .TP
 \fIshow\fP \fIENTITY\fP \fIID\fP
 Display the state of the specified entity with the specified identification.
-\fIENTITY\fP may be \fIconfig\fP, \fIjob\fP, \fInode\fP, \fIpartition\fP
-or \fIstep\fP.
+\fIENTITY\fP may be \fIconfig\fP, \fIdaemons\fP, \fIjob\fP, \fInode\fP, 
+\fIpartition\fP or \fIstep\fP.
 \fIID\fP can be used to identify a specific element of the identified 
 entity: the configuration parameter name, job ID, node name, partition name, 
 or job step ID for entities \fIconfig\fP, \fIjob\fP, \fInode\fP, \fIpartition\fP, 
